--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lang" ="ar" dir="rtl">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -193,21 +193,24 @@
           <div class="carousel-item active">
             <img
               src="https://via.placeholder.com/1400x500"
-              class="d-block w-100"
+              class="img-fluid"
+              style="min-height: 50vh; width: 100%"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://via.placeholder.com/1400x500"
-              class="d-block w-100"
+              class="img-fluid"
+              style="min-height: 50vh; width: 100%"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://via.placeholder.com/1400x500"
-              class="d-block w-100"
+              class="img-fluid"
+              style="min-height: 50vh; width: 100%"
               alt="..."
             />
           </div>
@@ -314,10 +317,8 @@
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+              <h5>قصة نجاح</h5>
+              <p>قصة نجاح اسرة منتجة</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -327,10 +328,8 @@
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+              <h5>قصة نجاح</h5>
+              <p>قصة نجاح اسرة منتجة</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -340,10 +339,8 @@
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+              <h5>قصة نجاح</h5>
+              <p>قصة نجاح اسرة منتجة</p>
             </div>
           </div>
         </div>
@@ -370,44 +367,61 @@
     <!-- end success stories section -->
     <section class="locations-section">
       <div class="container">
-        <h2 class="section-title text-center">الجمعيات الخيرية</h2>
-        <p class="section-description text-center mb-5">
+        <h2 class="section-title text-center" style="font-size: 3rem">
+          وسطاء التمويل
+        </h2>
+        <p
+          class="section-description text-center mb-5"
+          style="font-size: 1.5rem"
+        >
           استكشف مواقعنا المتعددة :
         </p>
         <div class="row">
-          <div class="col-lg-4">
-            <h3>جمعية خيرية</h3>
-            <p>وصف للجمعية خيرية .</p>
+          <div class="col-lg-6">
+            <h3 class="mb-3">جمعية ام القرى الخيرية</h3>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4308.09240049899!2d46.64543043317784!3d24.77286265144544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2ee35baeb929cf%3A0xfed9d43f3160907f!2z2KjZhtmDINin2YTYqtmG2YXZitipINin2YTYp9is2KrZhdin2LnZitipIC0g2KfZhNil2K_Yp9ix2Kkg2KfZhNi52KfZhdip!5e0!3m2!1sen!2ssa!4v1708980770064!5m2!1sen!2ssa"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3713.7410852050975!2d39.78955102348717!3d21.439419580314595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c21b655cc5b59d%3A0xfca26fc6c354406e!2z2KzZhdi52YrYqSDYo9mFINin2YTZgtix2Ykg2KfZhNmG2LPYp9im2YrYqSDYp9mE2K7Zitix2YrYqQ!5e0!3m2!1sar!2ssa!4v1709014535688!5m2!1sar!2ssa"
               width="100%"
-              height="300"
+              height="400"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
-          <div class="col-lg-4">
-            <h3>جمعية خيرية</h3>
-            <p>وصف للجمعية خيرية .</p>
+          <div class="col-lg-6">
+            <h3 class="mb-3">جمعية جود</h3>
+
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4308.09240049899!2d46.64543043317784!3d24.77286265144544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2ee35baeb929cf%3A0xfed9d43f3160907f!2z2KjZhtmDINin2YTYqtmG2YXZitipINin2YTYp9is2KrZhdin2LnZitipIC0g2KfZhNil2K_Yp9ix2Kkg2KfZhNi52KfZhdip!5e0!3m2!1sen!2ssa!4v1708980770064!5m2!1sen!2ssa"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3573.3602263414914!2d50.077302423379784!3d26.411849476949357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49fcee9bdbe783%3A0xa95fe6c2386ff3dd!2z2KzZhdi52YrYqSDYrNmI2K8g2KfZhNmG2LPYp9im2YrYqSDYp9mE2K7Zitix2YrYqSDYqNin2YTYr9mF2KfZhQ!5e0!3m2!1sar!2ssa!4v1709014189127!5m2!1sar!2ssa"
               width="100%"
-              height="300"
+              height="400"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
-          <div class="col-lg-4">
-            <h3>جمعية خيرية</h3>
-            <p>وصف للجمعية خيرية .</p>
+          <div class="col-lg-6 mt-4">
+            <h3 class="mb-3">مركز جنى</h3>
+
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4308.09240049899!2d46.64543043317784!3d24.77286265144544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2ee35baeb929cf%3A0xfed9d43f3160907f!2z2KjZhtmDINin2YTYqtmG2YXZitipINin2YTYp9is2KrZhdin2LnZitipIC0g2KfZhNil2K_Yp9ix2Kkg2KfZhNi52KfZhdip!5e0!3m2!1sen!2ssa!4v1708980770064!5m2!1sen!2ssa"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3573.3156734748245!2d50.09957642337975!3d26.413287776948476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49fca76f455a45%3A0x7c67dfb53c131a73!2z2YXYsdmD2LIg2KjZhtin2KEg2KfZhNij2LPYsSDYp9mE2YXZhtiq2KzZhyAi2KzZhtmJIg!5e0!3m2!1sar!2ssa!4v1709014411967!5m2!1sar!2ssa"
               width="100%"
-              height="300"
+              height="400"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="col-lg-6 mt-4">
+            <h3 class="mb-3">لجنة التنمية الاجتماعية الأهلية</h3>
+
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.583237450129!2d46.72871772347006!3d22.293771679691226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e225312f6e44a61%3A0x44228c8c9180ed52!2z2KzZhdi52YrYqSDYp9mE2KrZhtmF2YrYqSDYp9mE2KPZh9mE2YrYqSDYqNin2YTYo9mB2YTYp9is!5e0!3m2!1sar!2ssa!4v1709014856632!5m2!1sar!2ssa"
+              width="100%"
+              height="400"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
@@ -423,6 +437,5 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.4.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
